tests/test_data/CodeStructureSnippets/good/func_dec.ifj21
require "ifj21"
global concat : function(string,string): string, integer
function concat (x : string, y : string) : string, integer
    return x .. y, 0 
end
function main()
    local x : string
    local ret: integer
    x, ret = concat("ahoj", "svete")
end
main()

