tests/test_data/CodeStructureSnippets/bad/sem_err_5.1.ifj21
require "ifj21"

function foo() : string, integer
  local i : integer = 1
  local j : integer = 2

  return i, j           --bad navratovy typ
end
foo()